Initialize project demo Giphy

--- a/src/Giphy.css
+++ b/src/Giphy.css
@@ -25,3 +25,16 @@
   overflow-y: scroll;
   max-height: calc(100vh - 100px);
 }
+
+.modal-gif {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 2;
+}
